--- a/bulid/css/index_L01.css
+++ b/bulid/css/index_L01.css
@@ -14,6 +14,11 @@ body {
   position: relative;
   font-size: 32px;
 }
+.flex-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
 .wp {
   height: 100%;
   overflow: hidden;
