--- a/src/css/base.css
+++ b/src/css/base.css
@@ -14,6 +14,9 @@ body {
   position: relative;
   font-size: 32px;
 }
+.flex-container {
+  display: flex;
+}
 .wp {
   height: 100%;
   overflow: hidden;
