--- a/src/css/index.css
+++ b/src/css/index.css
@@ -14,6 +14,9 @@ body {
   position: relative;
   font-size: 32px;
 }
+.flex-container {
+  display: flex;
+}
 .wp {
   height: 100%;
   overflow: hidden;
@@ -65,6 +68,9 @@ img {
 }
 .color-2 {
   color: #fff;
+}
+.color-666 {
+  color: #666;
 }
 .ll {
   float: left;
