--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,134 +1,4 @@
-html{
-    -webkit-font-smoothing: antialiased;
-    -webkit-overflow-scrolling: touch;
-    -moz-overflow-scrolling: touch;
-    -o-overflow-scrolling: touch;
-    overflow-scrolling: touch;
-    height:100%;
-}
-body{
-    padding: 0;
-    margin: 0;
-    height:100%;
-    width:100%;
-    position:relative;
-    font-size:32px;
-    
-}
-.wp {
-    height:100%;
-    overflow: hidden;
-}
-//.page-wrap{
-//  width: 100%;
-//  height: 100%;
-//  position: absolute;
-//  left: 0;
-//  top: 0;
-//}
-
-.clearfix:after{
-    clear:both;
-    display:block;
-    visibility:hidden;
-    height:0;
-    line-height:0;
-    content:'';
-}
-.px2rem(@name, @px){
-    @{name}: @px / 75 * 1rem;
-}
-.px2px(@name, @px){
-    @{name}: @px * 1.5px;
-    [data-dpr="2"] & {
-        @{name}: @px * 1px;
-    }
-    [data-dpr="2.5"] & {
-        @{name}: round(@px * 2.5 / 2) * 1px;
-    }
-    [data-dpr="2.75"] & {
-        @{name}: round(@px * 2.75 / 2) * 1px;
-    }
-    [data-dpr="3"] & {
-        @{name}: round(@px / 2 * 3) * 1px
-    }
-    [data-dpr="4"] & {
-        @{name}: @px * 2px;
-    }
-}
-.music {
-    background-image: url('../images/music.png');
-    .px2rem(width, 64);
-    .px2rem(height, 64);
-    background-size: contain;
-    position:fixed;
-    .px2rem(top, 40);
-    .px2rem(right, 40);
-    &.play {
-        animation: music 2s infinite linear;;
-    }
-}
-#bgMusic {
-    display:none
-}
-.up {
-    background-image: url('../images/up.png');
-    .px2rem(width, 40);
-    .px2rem(height, 22);
-    position:fixed;
-    background-size: contain;
-    z-index: 100;
-    left:50%;
-    .px2rem(margin-left, -20);
-    .px2rem(bottom, 40);
-    z-index: 10;
-    animation: arrow 1.5s infinite linear;
-}
-img {
-    display:block;
-}
-.img-100 {
-    width:100%;
-}
-.color-1 {
-    color:#fcf698;
-}
-.color-2 {
-    color:#fff;
-}
-.ll {
-    float:left;
-}
-.rr {
-    float:right;
-}
-input,textarea,button,div,img,p {
-    -webkit-tap-highlight-color:rgba(0,0,0,0);
-    outline: none;
-    border:0
-}
-//-------------全屏滚动--------------
-.fullPage-wp{   
-    transform: translate3d(0,0,0);     
-}
-.fullPage-wp:after {
-    display: block;
-    content: ' ';
-    height: 0;
-    clear: both;
-}
-.fullPage-wp.anim{
-    transition: all 500ms ease-out 0s; 
-}
-.fullPage-page{
-    display: block;
-    overflow: hidden;
-}
-
-.fullPage-dir-h {
-    float: left;
-}
-
+@import "base.less";
 //---------------page1-wrap
 .page1-wrap {
     height:100%;
