--- a/src/less/index_L01.less
+++ b/src/less/index_L01.less
@@ -1,24 +1,4 @@
-.px2rem(@name, @px){
-    @{name}: @px / 75 * 1rem;
-}
-.px2px(@name, @px){
-    @{name}: @px * 1.5px;
-    [data-dpr="2"] & {
-        @{name}: @px * 1px;
-    }
-    [data-dpr="2.5"] & {
-        @{name}: round(@px * 2.5 / 2) * 1px;
-    }
-    [data-dpr="2.75"] & {
-        @{name}: round(@px * 2.75 / 2) * 1px;
-    }
-    [data-dpr="3"] & {
-        @{name}: round(@px / 2 * 3) * 1px
-    }
-    [data-dpr="4"] & {
-        @{name}: @px * 2px;
-    }
-}
+@import "base.less";
 //---------------page1-wrap--------------------
 .page1-wrap {
     height:100%;
