--- a/src/less/index_h02.less
+++ b/src/less/index_h02.less
@@ -71,46 +71,67 @@
 }
 
 .page1-wrap {
+    background-color: rgba(255, 255, 255, 0.9);
 
-    .page1-1 {
+    .page1-bg{
         position: absolute;
-        .px2rem(top,20);
+        .px2rem(top,100);
         left:0;
-        width:100%;
+        right: 0;
         img {
             margin:0 auto;
-            .px2rem(width,646);
+            .px2rem(width,630);
         }
     }
-    .page1-2 {
-        position:absolute;
-        .px2rem(bottom,20);
-        left:0;
-        width:100%;
-         img {
-            margin:0 auto;
-            .px2rem(width,646);
-        }
-    }
-    .page1-3 {
-        .px2rem(margin-top,300);
-        display: flex;
-        img {
-            .px2rem(width,170);
-            margin:auto;
-        }
-    }
-    .page1-4 {
-        display:flex;
-        img {
-            .px2rem(width,220);
-            margin:auto;
-        }
-    }
+
+
+
+//  .page1-1 {
+//      position: absolute;
+//      .px2rem(top,20);
+//      left:0;
+//      width:100%;
+//      img {
+//          margin:0 auto;
+//          .px2rem(width,646);
+//      }
+//  }
+//  .page1-2 {
+//      position:absolute;
+//      .px2rem(bottom,20);
+//      left:0;
+//      width:100%;
+//       img {
+//          margin:0 auto;
+//          .px2rem(width,646);
+//      }
+//  }
+//  .page1-3 {
+//      .px2rem(margin-top,300);
+//      display: flex;
+//      img {
+//          .px2rem(width,170);
+//          margin:auto;
+//      }
+//  }
+//  .page1-4 {
+//      display:flex;
+//      img {
+//          .px2rem(width,220);
+//          margin:auto;
+//      }
+//  }
     .page1-5 {
+
+        position: absolute;
+        .px2rem(top,180);
+        left:0;
+        width:100%;
+
+
         text-align: center;
         color: #b60;
-        font-weight: bolder;
+//      font-weight: bolder;
         text-shadow: 0 0 3px #fff;
         .px2rem(margin-top,80);
         .marrier {
@@ -118,14 +139,20 @@
         }
     }
     .page1-6 {
-        display:flex;
-        .px2rem(margin-top,50);
+        position: absolute;
+        .px2rem(top,450);
+        left:0;
+        width:100%;
         img {
             margin:auto;
             .px2rem(width,240);
         }
     }
     .page1-7 {
+        position: absolute;
+        .px2rem(top,500);
+        left:0;
+        width:100%;
         text-align: center;
     }
 }
